[package]
name = "memu"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html


[features]
default = ["macro", "units"]
serde = []
macro = []
units = []

[dependencies]
serde = { version = "1.0.186", features = ["derive"] }
