[package]
name = "memu"
version = "0.1.3"
edition = "2021"
description = "Implementations of memory units and working with them"
authors = ["Felix Scholz <mr.felix.scholz@web.de>"]
license = "MIT"
readme = "README.md"
homepage = "https://github.com/zoolq/tusk/tree/master/memu"
repository = "https://github.com/zoolq/tusk/tree/master/memu"
keywords = ["units", "memory", "measure", "computer-sience", "memory-units"]
categories = ["science", "mathematics"]
include = ["src/", "README.md"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
default = ["macro", "units"]
serde = []
macro = []
units = []

[dependencies]
serde = { version = "1.0.186", features = ["derive"] }
