[package]
name = "namefn"
version = "0.1.3"
edition = "2021"
description = "Adds a macro to retrive the name of the current function"
authors = ["Felix Scholz <mr.felix.scholz@web.de>"]
license = "MIT"
readme = "README.md"
homepage = "https://github.com/zoolq/tusk/tree/master/namefn"
repository = "https://github.com/zoolq/tusk/tree/master/namefn"
keywords = ["macros", "functions", "name", "attribute-macro"]
categories = ["development-tools"]
include = ["src/", "README.md"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
proc-macro = true

[dependencies]
proc-macro2 = "1.0.66"
quote = "1.0.33"
syn = { version = "2.0.31", features = ["full"] }
