[package]
name = "tusk"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
sysinfo = "0.29.8"
memu = { path = "../memu" }
crossterm = "0.27.0"
ratatui = "0.23.0"
lazy_static = "1.4.0"
serde = { version = "1.0.188", features = ["derive"] }
features = "0.10.0"
color-to-tui = "0.3.0"
serde_yaml = "0.9.25"
